[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Player0.gd" type="Script" id=1]
[ext_resource path="res://Assets/SpriteFrame0.tres" type="SpriteFrames" id=2]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2.5, 2.5 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2.5, 2.5 )

[node name="Player0" type="KinematicBody2D"]
collision/safe_margin = 0.01
script = ExtResource( 1 )
speed = 60
dashMultiplier = 150
dashCooldown = 2.0
scaleDownMultiplier = 1.003
scaleDownOffset = 9.0

[node name="PlayerFeetCollider" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 6.5 )
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 2 )
animation = "falling"

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="A2DFeetCollider" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.5, 6.5 )
shape = SubResource( 1 )

[node name="FallingTimer" type="Timer" parent="."]
one_shot = true

[node name="DashCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="FallingTimer" to="." method="_on_FallingTimer_timeout"]
[connection signal="timeout" from="DashCooldownTimer" to="." method="_on_DashCooldownTimer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
